// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoSystemsTable should render correctly - no groups 1`] = `
<NoEntitiesFound
  entities="groups"
  showIcon={true}
>
  <EmptyState
    data-ouia-component-id="empty-state"
    data-ouia-component-type="PF4/EmptyState"
    data-ouia-safe={true}
    variant="full"
  >
    <div
      className="pf-c-empty-state"
      data-ouia-component-id="empty-state"
      data-ouia-component-type="PF4/EmptyState"
      data-ouia-safe={true}
    >
      <div
        className="pf-c-empty-state__content"
      >
        <EmptyStateIcon
          icon={[Function]}
        >
          <SearchIcon
            aria-hidden="true"
            className="pf-c-empty-state__icon"
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          >
            <svg
              aria-hidden="true"
              aria-labelledby={null}
              className="pf-c-empty-state__icon"
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              />
            </svg>
          </SearchIcon>
        </EmptyStateIcon>
        <Title
          headingLevel="h5"
          size="lg"
        >
          <h5
            className="pf-c-title pf-m-lg"
            data-ouia-component-id="OUIA-Generated-Title-2"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe={true}
          >
            No matching groups found
          </h5>
        </Title>
        <EmptyStateBody>
          <div
            className="pf-c-empty-state__body"
          >
            To continue, edit your filter settings and try again
          </div>
        </EmptyStateBody>
      </div>
    </div>
  </EmptyState>
</NoEntitiesFound>
`;

exports[`NoSystemsTable should render correctly - no systems 1`] = `
<NoEntitiesFound
  entities="systems"
  showIcon={true}
>
  <EmptyState
    data-ouia-component-id="empty-state"
    data-ouia-component-type="PF4/EmptyState"
    data-ouia-safe={true}
    variant="full"
  >
    <div
      className="pf-c-empty-state"
      data-ouia-component-id="empty-state"
      data-ouia-component-type="PF4/EmptyState"
      data-ouia-safe={true}
    >
      <div
        className="pf-c-empty-state__content"
      >
        <EmptyStateIcon
          icon={[Function]}
        >
          <SearchIcon
            aria-hidden="true"
            className="pf-c-empty-state__icon"
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          >
            <svg
              aria-hidden="true"
              aria-labelledby={null}
              className="pf-c-empty-state__icon"
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              />
            </svg>
          </SearchIcon>
        </EmptyStateIcon>
        <Title
          headingLevel="h5"
          size="lg"
        >
          <h5
            className="pf-c-title pf-m-lg"
            data-ouia-component-id="OUIA-Generated-Title-1"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe={true}
          >
            No matching systems found
          </h5>
        </Title>
        <EmptyStateBody>
          <div
            className="pf-c-empty-state__body"
          >
            To continue, edit your filter settings and try again
          </div>
        </EmptyStateBody>
      </div>
    </div>
  </EmptyState>
</NoEntitiesFound>
`;
